Fix z-index ordering

--- a/packages/delir/src/assets/styles/variables.sass
+++ b/packages/delir/src/assets/styles/variables.sass
@@ -27,5 +27,5 @@ $z-index-frame-cursor: 100
 $z-index-expression-editor: 200
 $z-index-range-selection: 4000
 $z-index-dropdown: 5000
-$z-index-modal-window: 10000
-$z-index-notifications: 15000
+$z-index-notifications: 10000
+$z-index-modal-window: 15000
